--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
     }
 
     function dir(){
-      console.dir(document.head);
+      // console.dir(document.head);
+      console.log("We're in dir");
     }
 
     function dirxml(){
@@ -187,6 +188,8 @@
       noneExistentFunction();
     }catch(err){
       console.log(err);
+    }finally{
+      console.log("we are here finally...");
     }
 
   </script>
