--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
     }
 
     function globalError(){
-
+      window.onerror = function(message, url, line, col, error) {
+        alert(`${message}\n At ${line}:${col} of ${url}`);
+     };
     }
 
 
