commented out trackjs

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
   <script src="https://cdn.trackjs.com/agent/v3/latest/t.js">
 
-    window.TrackJS && TrackJS.install({ 
-        token: "17238141aca246ce9a335a23e10836fe"
-      });
+    // window.TrackJS && TrackJS.install({ 
+    //     token: "17238141aca246ce9a335a23e10836fe"
+    //   });
 
 
     let form = document.querySelector('form');
