--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     </section>
   </main>
 
-  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js">
-
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
     // window.TrackJS && TrackJS.install({ 
     //     token: "17238141aca246ce9a335a23e10836fe"
     //   });
