--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
       window.onerror = function(message, url, line, col, error) {
         alert(`${message}\n At ${line}:${col} of ${url}`);
      }
+     TrackJS.track('Testing TrackJS!');
     }
 
 
