--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
         alert(`${message}\n At ${line}:${col} of ${url}`);
      }
      TrackJS.track('We are playing the messages in TrackJS!');
+    
+     console.log(window.onerror);
     }
 
 
